# libqcperf

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT-GUIDE.md  README.md  SECURITY.md
.claude/commands/: write-tests.md
.github/ISSUE_TEMPLATE/: backend_request.md  bug_report.md  config.yml  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
assets/: libqcperf_backend_architecture.mmd  libqcperf_flow.mmd  libqcperf_flow_generic.mmd  libqcperf_sequence.mmd
qcperf/: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  run-tests-with-report.ps1
qcperf/backends/: CMakeLists.txt
qcperf/backends/dummy/: CMakeLists.txt
qcperf/backends/dummy/inc/: dummy.h  dummy_info.h
qcperf/backends/dummy/src/: dummy.c  dummy_info.c
qcperf/backends/inc/: CMakeLists.txt  qcperf_backend_enum.h  qcperf_backends.h
qcperf/backends/qcom-dsp/: CMakeLists.txt
qcperf/backends/qcom-dsp-npu/: CMakeLists.txt
qcperf/backends/qcom-dsp-npu/inc/: qcom_dsp_npu.h  qcom_dsp_npu_info.h
qcperf/backends/qcom-dsp-npu/src/: qcom_dsp_npu.c  qcom_dsp_npu_info.c
qcperf/backends/qcom-dsp/inc/: AEEStdDef.h  AEEStdErr.h  dspquery_stub.h  qcom_dsp.h  remote.h  rpcmem.h
qcperf/backends/qcom-dsp/src/: cdsprpc_stub.c  dspquery_stub.c  qcom_dsp.c
qcperf/backends/qcom-linux-cpu/: CMakeLists.txt
qcperf/backends/qcom-linux-cpu/inc/: qcom_linux_cpu.h  qcom_linux_cpu_info.h  qcom_linux_cpu_utils.h
qcperf/backends/qcom-linux-cpu/src/: qcom_linux_cpu.c  qcom_linux_cpu_info.c  qcom_linux_cpu_utils.c
qcperf/backends/utils/: CMakeLists.txt
qcperf/backends/utils/wos/: CMakeLists.txt
qcperf/backends/utils/wos/cpu-thermal-etw/: CMakeLists.txt
qcperf/backends/utils/wos/cpu-thermal-etw/inc/: cpu_thermal_etw_library.h  passive_cooling.h  thermal_common.h
qcperf/backends/utils/wos/cpu-thermal-etw/src/: cpu_thermal_etw_library.cpp  passive_cooling.c  thermal_common.cpp
qcperf/backends/utils/wos/ioctl/: CMakeLists.txt
qcperf/backends/utils/wos/ioctl/inc/: wos_ioctl.h
qcperf/backends/utils/wos/ioctl/src/: wos_ioctl.c
qcperf/backends/utils/wos/pep/inc/: qcpep_power_ioctl.h
qcperf/backends/wos-power-backend/: CMakeLists.txt
qcperf/backends/wos-power-backend/inc/: wos_power_backend.h  wos_power_backend_info.h  wos_power_backend_logger.h
qcperf/backends/wos-power-backend/power-telemetry/: CMakeLists.txt
qcperf/backends/wos-power-backend/power-telemetry/inc/: power_telemetry.h
qcperf/backends/wos-power-backend/power-telemetry/src/: power_telemetry.c
qcperf/backends/wos-power-backend/src/: wos_power_backend.c  wos_power_backend_logger.c
qcperf/backends/wos-thermal/: CMakeLists.txt
qcperf/backends/wos-thermal/inc/: wos_thermal.h  wos_thermal_info.h  wos_thermal_lib.h  wos_thermal_logger.h
qcperf/backends/wos-thermal/src/: wos_thermal.c  wos_thermal_info.c  wos_thermal_lib.c  wos_thermal_logger.c
qcperf/cmake/: BuildConfig.cmake
qcperf/cmake/toolchains/: aarch64-linux-gnu.cmake
qcperf/core/: CMakeLists.txt
qcperf/core/inc/: qcperf.h  qcperf_common.h
qcperf/core/inc/internal/: qcperf_backend_interface.h
qcperf/core/src/: qcperf.c
qcperf/test_app/: CMakeLists.txt
qcperf/test_app/src/: qcperf_core_test.c  test_backends.c  test_qcperf_core.c  test_qcperf_unit.c  test_runner.c  test_runner_backends.c
qcperf/utils/: CMakeLists.txt
qcperf/utils/qcondition-variable/: CMakeLists.txt
qcperf/utils/qcondition-variable/inc/: QCv.h  qcv.h
qcperf/utils/qcondition-variable/src/linux/: QCv.c  qcv.c
qcperf/utils/qcondition-variable/src/windows/: QCv.c  qcv.c
qcperf/utils/qlist/: CMakeLists.txt
qcperf/utils/qlist/inc/: QList.h  qlist.h
qcperf/utils/qlist/src/: QList.c  qlist.c
qcperf/utils/qmutex/: CMakeLists.txt
qcperf/utils/qmutex/inc/: QMutex.h
qcperf/utils/qmutex/src/linux/: QMutex.c  qmutex.c
qcperf/utils/qmutex/src/windows/: QMutex.c  qmutex.c
qcperf/utils/qsleep/: CMakeLists.txt
qcperf/utils/qsleep/inc/: QSleep.h
qcperf/utils/qsleep/src/: QSleep.c
qcperf/utils/qthread/: CMakeLists.txt
qcperf/utils/qthread/inc/: qthread.h
qcperf/utils/qthread/src/linux/: QThread.c  qthread.c
qcperf/utils/qthread/src/windows/: QThread.c
qcperf/utils/qtime/: CMakeLists.txt
qcperf/utils/qtime/inc/: qtime.h
qcperf/utils/qtime/src/linux/: qtime.c
qcperf/utils/qtime/src/windows/: qtime.c
qcperf/version_info/: CMakeLists.txt  version_info.h.in
